--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
 .App {
-  background-color: #282c34;
+  background-color: gray;
   min-height: 100vh;
-  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+tr, td {
+  border: 1px solid black;
+}
+
+td {
+  height: 50px;
+  width: 50px;
+  background-color: white;
 }
